--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,18 @@ project(assignment3 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(assignment3 main.c huffman_lib.c huffman_lib.h)
+include_directories(/usr/local/include)
+link_directories(/usr/local/lib)
 
-target_compile_options(assignment3 PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+add_library(huffman_lib huffman_lib.c huffman_lib.h)
+target_link_libraries(huffman_lib dc dc_utils rt)
+target_compile_options(huffman_lib PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+
+add_executable(compress-huffman huffman_lib.c huffman_lib.h compress-huffman.c )
+target_link_libraries(compress-huffman dc dc_utils rt)
+target_compile_options(compress-huffman PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+
+add_executable(decompress-huffman huffman_lib.c huffman_lib.h decompress-huffman.c)
+target_link_libraries(decompress-huffman dc dc_utils rt)
+target_compile_options(decompress-huffman PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+
