--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,12 @@ target_compile_options(compress-rle PRIVATE -Wpedantic -Wall -Wextra -fPIC)
 
 add_executable(decompress-rle rle_lib.c rle_lib.h decompress-rle.c )
 target_compile_options(decompress-rle PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+
+add_library(lzw_lib lzw_lib.c lzw_lib.h)
+target_compile_options(lzw_lib PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+#
+#add_executable(compress-rle rle_lib.c rle_lib.h compress-rle.c )
+#target_compile_options(compress-rle PRIVATE -Wpedantic -Wall -Wextra -fPIC)
+#
+#add_executable(decompress-rle rle_lib.c rle_lib.h decompress-rle.c )
+#target_compile_options(decompress-rle PRIVATE -Wpedantic -Wall -Wextra -fPIC)
